--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,8 @@ numpy = "^1.22.1"
 pandas = "^1.4.0"
 requests = "^2.27.1"
 pytest = "^7.2.0"
+mock = "^4.0.3"
+coverage = "^6.5.0"
 
 
 [build-system]
